cleaned up example